<resources>
    <string name="app_name">MBT App</string>
    <string name="TXT_COMMON_WARNING">Warning</string>
    <string name="TXT_LOGIN_WELCOME_BUTTON">Sign in</string>
    <string name="TXT_LOGIN_PIN_TITLE">PIN Code</string>
    <string name="TXT_LOGIN_PIN_DESCRIPTION">Enter 4 digit PIN code that you received via SMS</string>
    <string name="TXT_LOGIN_PIN_RESEND">Resend</string>
    <string name="TXT_ABOUT_NAV">About</string>
    <string name="TXT_ABOUT_HEADER">PROVIDER</string>
    <string name="TXT_ABOUT_MAIN_PROVIDER_INFO">"Mercedes-Benz Türk A.Ş.
Akçaburgaz Mahallesi,
Süleyman Şah Caddesi, No:2
34522 Esenyurt, İstanbul

Telephone: 0212 867 30 00 pbx
mbt_app@daimlertruck.com

Board of Management

MBT, Head of Board of Management (CEO), Süer Sülün
MBT, Board Member, Production Bus, Bülent Acicbe
MBT, Board Member, CFO MBT, Tülin Mede Esmer
MBT, Board Member, Executive Vice President Production Trucks, Ulf Raese

Süer Sülün, Head of Board of Management, CEO Mercedes Benz Türk A.Ş.
Bülent Acicbe,  Board Member, Production Bus
Andreas Bachhofer,  Board Member, Production Truck
Tülin Mede Esmer,   Board Member, CFO MBT
Şükrü Bekdikhan,    Head of Board of Management, MB Cars
Tufan Akdeniz,  Board Member, Vans
Manfred Ausweger,   Board Member, CFO MBO
Özlem Vidin Engindeniz, Board Member, Global IT Solution Delivery Center
Stefan Karrenbauer, Managing Director of Mercedes Benz Finansman Türk A.Ş.

Commercial Register Number: 94468
VAT Identification Number: 7-9159-7212-1615130

Copyright 2018-2026 Mercedes-Benz Türk A.Ş.
All Rights Reserved."</string>
    <string name="TXT_ABOUT_MAIN_APP_DESCRIPTION">App Description</string>
    <string name="TXT_ABOUT_MAIN_TERMS_OF_USE">Terms Of Use</string>
    <string name="TXT_ABOUT_MAIN_DATA_PROTECTION">Data Protection</string>
    <string name="TXT_ABOUT_MAIN_FOSS">Free &amp; Open Source Software</string>
    <string name="TXT_ABOUT_MAIN_3RD_PARTY_CONTENT">Third Party Content</string>
    <string name="TXT_ABOUT_MAIN_LEGAL_NOTICES">Legal Notices</string>
    <string name="TXT_ABOUT_MAIN_APP_SUPPORT">App Support</string>
    <string name="TXT_LOGIN_HOME_TAB1">Portal</string>
    <string name="TXT_LOGIN_HOME_TAB2">Notifications</string>
    <string name="TXT_LOGIN_HOME_TAB3">My Profile</string>
    <string name="TXT_LOGIN_HOME_NEWS">News</string>
    <string name="TXT_LOGIN_HOME_ABOUT_US">About Us</string>
    <string name="TXT_LOGIN_HOME_EVENTS">Events</string>
    <string name="TXT_LOGIN_HOME_DISCOUNTS">Discounts</string>
    <string name="TXT_LOGIN_HOME_USEFUL_LINKS">Useful Links</string>
    <string name="TXT_LOGIN_HOME_EMERGENCY_NUMBERS">Emergency Numbers</string>
    <string name="TXT_LOGIN_HOME_MAP">Location</string>
    <string name="TXT_LOGIN_HOME_SHUTTLE">Shuttle</string>
    <string name="TXT_LOGIN_HOME_MENU">Meal Menu</string>
    <string name="TXT_PROFILE_PROFILE_1ST_SUBTITLE">LOCATION / BRANCH</string>
    <string name="TXT_PROFILE_PROFILE_2ND_SUBTITLE">COST CENTER / ORG. UNIT / COMPANY CODE</string>
    <string name="TXT_PROFILE_PROFILE_3RD_SUBTITLE">MANAGER</string>
    <string name="TXT_PROFILE_PROFILE_1ST_BUTTON_WHITE">Flexible Working Hours</string>
    <string name="TXT_PROFILE_PROFILE_1ST_BUTTON_BLUE">Additional Work</string>
    <string name="TXT_PROFILE_PROFILE_2ND_BUTTON">Work Calendar</string>
    <string name="TXT_PROFILE_PROFILE_3RD_BUTTON">Payslip</string>
    <string name="TXT_PROFILE_FLEXIBLE_WORK_YEAR">Year</string>
    <string name="TXT_OTP_TITLE">Payslip Code Verification</string>
    <string name="TXT_OTP_TEXT">Enter the code you received via SMS:</string>
    <string name="TXT_OTP_HINT">6 Digit SMS Code</string>
    <string name="TXT_OTP_TIME">Remaining Time</string>
    <string name="TXT_OTP_ELAPSED">Code expired</string>
    <string name="TXT_OTP_EXPIRED">Code expired</string>
    <string name="TXT_OTP_TOAST2">Connection error</string>
    <string name="TXT_OTP_TOAST3">Network Error</string>
    <string name="TXT_OTP_TOAST5">Verification Code is not correct</string>
    <string name="TXT_PAYSLIP_PERIOD_TOAST1">No payslip for this month!</string>
    <string name="TXT_PAYSLIP_PERIOD_TOAST2">PDF display error</string>
    <string name="TXT_PAYSLIP_PERIOD_TOAST3">The session has expired.</string>
    <string name="TXT_PAYSLIP_PERIOD_TOAST4">"No payslip for this month"</string>
    <string name="TXT_PAYSLIP_PERIOD_TOAST5">"Network Error"</string>
    <string name="TXT_PAYSLIP_PERIOD_TOAST6">Error opening PDF</string>
    <string name="TXT_PAYSLIP_PERIOD">Payslip Period</string>
    <string name="TXT_PAYSLIP_PERIOD_MONTH">Month:</string>
    <string name="TXT_PAYSLIP_PERIOD_YEAR">Year  :</string>
    <string name="TXT_PAYSLIP_PERIOD_BUTTON">View Payslip</string>
    <string name="TXT_PAYSLIP_PERIOD_PAYSLIP">payslip</string>
    <string name="TXT_OTP_VERIFY">Verify</string>
    <string name="TXT_OTP_RESEND">Resend</string>
    <string name="TXT_OTP_ENTER_CODE">Please enter the code.</string>
    <string name="TXT_OTP_EXPIRED_MESSAGE">The verification code has expired. Please verify again.</string>
    <string name="TXT_OTP_INVALID_CODE">Invalid verification code</string>
    <string name="TXT_COMMON_ERROR">Error</string>
    <string name="TXT_COMMON_INFO">Info</string>
    <string name="TXT_COMMON_DONE">OK</string>
    <string name="TXT_COMMON_CONNECTION_ERROR">Connection Error!</string>
    <string name="TXT_PAYSLIP_NOT_FOUND">Payslip not found.</string>
    <string name="TXT_PAYSLIP_FILE_TITLE">%1$02d/%2$d Payslip</string>
    <string name="TXT_PAYSLIP_PDF_OPEN_ERROR">Failed to open PDF: %1$s</string>
    <string name="TXT_LOGIN_WELCOME_HEADER">Welcome</string>
    <string name="TXT_LOGIN_WELCOME_DESCRIPTION">Please click on Sign In button and continue with authentication steps.</string>
    <string name="TXT_LOGIN_TERMS_WELCOME_TITLE">Terms Of Use</string>
    <string name="TXT_LOGIN_TERMS_WELCOME_ACCEPT">Accept</string>
    <string name="TXT_LOGIN_TERMS_WELCOME_REJECT">Reject</string>
    <string name="TXT_LOGIN_TERMS_WELCOME_REJECT_ALERT_TEXT">You should accept the terms of use in order to continue otherwise you can close the app if you do not want to accept.</string>
    <string name="TXT_LOGIN_TERMS_WELCOME_REJECT_ALERT_TITLE">EULA</string>
    <string name="TXT_LOGIN_NEWS_TYPE1">All</string>
    <string name="TXT_LOGIN_NEWS_TYPE2">Events</string>
    <string name="TXT_LOGIN_NEWS_TYPE3">Discounts</string>
    <string name="TXT_LOGIN_NEWS_TYPE4">Farewell</string>
    <string name="TXT_LOGIN_NEWS_TYPE5">Decease</string>
    <string name="TXT_LOGIN_NEWS_TYPE6">Other</string>
    <string name="TXT_LOGIN_NEWS_TYPE7">News</string>
    <string name="TXT_LOGIN_NEWS_TYPE8">Links</string>
    <string name="TXT_LOGIN_NEWS_TYPE9">Contacts</string>
    <string name="TXT_LOGIN_NEWS_BIRTHDAY">Born Today</string>
    <string name="TXT_LOGIN_SUPPORT_TITLE">Technical Support</string>
    <string name="TXT_LOGIN_SUPPORT_DESCRIPTION">For system problems</string>
    <string name="TXT_LOGIN_SUPPORT_LABEL1">Phone</string>
    <string name="TXT_LOGIN_SUPPORT_LABEL2">Int</string>
    <string name="TXT_LOGIN_SUPPORT_BUTTON">Call</string>
    <string name="TXT_LOGIN_SUPPORT_CLOSE">Close</string>
    <string name="TXT_MENU_MENU_TITLE">Meal Menu</string>
    <string name="TXT_MENU_MENU_CALORIE">CALORIE</string>
    <string name="TXT_MENU_MENU_DENSITY">Real time cafeteria density</string>
    <string name="TXT_PROFILE_CALENDAR_DAY1">MO</string>
    <string name="TXT_PROFILE_CALENDAR_DAY2">TU</string>
    <string name="TXT_PROFILE_CALENDAR_DAY3">WE</string>
    <string name="TXT_PROFILE_CALENDAR_DAY4">TH</string>
    <string name="TXT_PROFILE_CALENDAR_DAY5">FR</string>
    <string name="TXT_PROFILE_CALENDAR_DAY6">SA</string>
    <string name="TXT_PROFILE_CALENDAR_DAY7">SU</string>
    <string name="TXT_COMMON_JANUARY">January</string>
    <string name="TXT_COMMON_FEBRUARY">February</string>
    <string name="TXT_COMMON_MARCH">March</string>
    <string name="TXT_COMMON_APRIL">April</string>
    <string name="TXT_COMMON_MAY">May</string>
    <string name="TXT_COMMON_JUNE">June</string>
    <string name="TXT_COMMON_JULY">July</string>
    <string name="TXT_COMMON_AUGUST">August</string>
    <string name="TXT_COMMON_SEPTEMBER">September</string>
    <string name="TXT_COMMON_OCTOBER">October</string>
    <string name="TXT_COMMON_NOVEMBER">November</string>
    <string name="TXT_COMMON_DECEMBER">December</string>
    <string name="TXT_COMMON_ANNOUNCEMENT">News</string>
    <string name="TXT_LOGIN_NEWS_DISCOUNT_TYPE1">Categories</string>
    <string name="TXT_SHUTTLE_SHUTTLE_DEST_PLCH">Departure…</string>
    <string name="TXT_SHUTTLE_SHUTTLE_DESTINATION">DEPARTURE</string>
    <string name="TXT_SHUTTLE_SHUTTLE_ARRIVAL_PLCH">Arrival…</string>
    <string name="TXT_SHUTTLE_SHUTTLE_DESTINATION_SMALL">(Deperture)</string>
    <string name="TXT_SHUTTLE_SHUTTLE_ARRIVAL_SMALL">(Arrival)</string>
    <string name="TXT_SHUTTLE_SHUTTLE_TIME">D.TIME</string>
    <string name="TXT_SHUTTLE_SHUTTLE_PATH">ROUTE</string>
    <string name="TXT_PROFILE_CALENDAR_TODAY">Today</string>
    <string name="TXT_PROFILE_SETTINGS_TITLE">Settings</string>
    <string name="TXT_PROFILE_SETTINGS_SUBTITLE">NOTIFICATION SETTINGS</string>
    <string name="TXT_PROFILE_SETTINGS_BUTTON">Sign out</string>
    <string name="TXT_PROFILE_SETTINGS_QUIT_WARNING"><font color="#FFFFFF">Are you sure you want to sign out?</font></string>
    <string name="TXT_LOCATIONS_LOCATIONS_PLACEHOLDER">Search Location…</string>
    <string name="TXT_LOCATIONS_LOCATIONS_TITLE">Location</string>
    <string name="TXT_LOCATIONS_LOCATIONS_MEETING_ROOM">Meeting Room</string>
    <string name="TXT_SHUTTLE_SHUTTLE_DRIVER_INFO">Driver Info</string>
    <string name="TXT_SHUTTLE_SHUTTLE_DRIVER">Driver</string>
    <string name="TXT_SHUTTLE_SHUTTLE_TEL">Phone</string>
    <string name="TXT_SHUTTLE_SHUTTLE_COMPANY_LOCATION">COMPANY LOCATION</string>
    <string name="TXT_SHUTTLE_SHUTTLE_TYPE">SHUTTLE TYPE</string>
    <string name="TXT_SHUTTLE_SHUTTLE_COMPANY_LOCATION_PLACEHOLDER">Select Company Location</string>
    <string name="TXT_SHUTTLE_SHUTTLE_TYPE_PLACEHOLDER">Select Shuttle Type</string>
    <string name="TXT_SHUTTLE_SHUTTLE_GO_ON">Continue</string>
    <string name="TXT_SHUTTLE_SEARCH_LATEST_SEARCH">LATEST SEARCHS</string>
    <string name="title_categories">Categories</string>
    <string name="TXT_SETTINGS_ALERT_DIALOG_TITLE"><font color="#FFFFFF">Sign Out</font></string>
    <string name="TXT_LOCATIONS_SEARCH_TITLE">SEARCH RESULT</string>
    <string name="TXT_LOCATIONS_SEARCH_RESULTS_TITLE">Search Result</string>
    <string name="TXT_LOGIN_SPLASH_ROOTED_DEVICE">You have to remove root from your device for execute this app.</string>
    <string name="option_cannot_be_empty">Company location and Shuttle Type parameters cannot be empty.</string>
    <string name="TXT_MB" translatable="false">Mercedes-Benz Türk</string>
    <string name="allowed_chars" translatable="false">1234567890</string>
    <string name="phone_mask" translatable="false">5XX-XXX-XX-XX</string>
    <string name="char_representation" translatable="false">X</string>
    <string name="phone_hint" translatable="false">XXXXXXXXX</string>
    <string name="TXT_LOGIN_SUPPORT_PHONE1" translatable="false">0212 8673399</string>
    <string name="TXT_LOGIN_SUPPORT_PHONE2" translatable="false">2222</string>
    <string name="TXT_DIGITAL_CARD">Business Card</string>
    <string name="TXT_CARD_MENU_SHOW">Show my business card</string>
    <string name="TXT_CARD_MENU_SHARE">Share my business card</string>
    <string name="TXT_CARD_MENU_CANCEL">Deactivate my business card</string>
    <string name="TXT_COMMON_CANCEL">Cancel</string>
</resources>