<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:text="@string/TXT_DIGITAL_CARD"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Show -->
    <TextView
        android:id="@+id/showCard"
        android:text="@string/TXT_CARD_MENU_SHOW"
        android:textSize="18sp"
        android:textColor="@android:color/holo_blue_light"
        android:padding="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Share -->
    <TextView
        android:id="@+id/shareCard"
        android:text="@string/TXT_CARD_MENU_SHARE"
        android:textSize="18sp"
        android:textColor="@android:color/holo_blue_light"
        android:padding="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Deactivate -->
    <TextView
        android:id="@+id/deactivateCard"
        android:text="@string/TXT_CARD_MENU_CANCEL"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_light"
        android:padding="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33FFFFFF"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp" />

    <TextView
        android:id="@+id/cancel"
        android:text="@string/TXT_COMMON_CANCEL"
        android:textSize="18sp"
        android:textColor="@android:color/holo_blue_bright"
        android:padding="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>